--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,7 +42,7 @@ body, html, .App, #root, .outer {
 }
 
 .inner {
-  width: 450px;
+  width: 30%;
   margin: auto;
   background: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
